# img2ascii

./: Cargo.toml  README.md  readme
.github/workflows/: publish.yml
docs/: README.md  main_old2.rs
src/: cli.rs  convert.rs  core.rs  edge.rs  main.rs  main_old.rs  output.rs  renderansi.rs  renderhtml.rs  types.rs
